[package]
name = "internode"
version = "0.0.7"
edition = "2021"
description = "Fast implementation of ASTRID-like methods"

[dependencies]
ndarray = "0.15.0"
clap = { version = "3.1.8", features = ["derive"] }
rayon = "1.5"
thread_local = "1.1"
anyhow = "1.0"
ordered-float = "3.0.0"
fixedbitset = "0.4.1"
tracing = "0.1"
tracing-subscriber = "0.3"
ndarray-npy = { version = "0.8.1", default-features = false }

[build-dependencies]
bindgen = "0.59.2"
cc = "1.0.73"

[[bin]]
name = "wastrid"
path = "src/main.rs"

[profile.release]
lto = "thin"

[target.x86_64-unknown-linux-musl]
linker = "/opt/homebrew/Cellar/musl-cross/0.9.9_1/bin/x86_64-linux-musl-gcc"